@@ -1,0 +1,1 @@
+The plonehelpcenter-various step is run if this file is present in the profile
